fix destructive secondary action not visible

--- a/src/components/ActionMenu/components/SecondaryAction/SecondaryAction.scss
+++ b/src/components/ActionMenu/components/SecondaryAction/SecondaryAction.scss
@@ -26,5 +26,10 @@ $button-spacing: rem(12px);
       border: none !important;
       @include focus-ring($border-width: rem(0));
     }
+
+    &.destructive {
+      // --p-button-color: var(--p-action-critical);
+      background: var(--p-text-on-critical);
+    }
   }
 }
